# crashs

./: .gitignore  Dockerfile  LICENSE  README.md  build_template.py  crashs.py  lddmm.py  mesh_lines.vtk  omt.py  preprocess_t2.py  profile_sampling.py  pyproject.toml  requirements.txt  roi_integrate.py  run_sample.sh  test_refactor.ipynb  util.py  vtkutil.py
.github/workflows/: docker-build.yml  python-publish.yml
misc/: test.ipynb
sample_data/035_S_4082_2011-06-28/affine_t1_to_template/: t1_to_template_affine.mat
sample_data/ashs_pmc_alveus/subj02/: readme.txt
sample_data/ashs_pmc_alveus/subj02/ashs/affine_t1_to_template/: t1_to_template_affine.mat
sample_data/ashs_pmc_alveus/subj02/ashs/flirt_t2_to_t1/: flirt_t2_to_t1.mat  flirt_t2_to_t1_inv.mat
sample_data/ashs_pmc_t1/subj01/: readme.txt
scripts/: run_sample_docker.sh
src/crashs/: __main__.py  build_template.py  crashs.py  derive_template.py  df.py  lddmm.py  omt.py  preprocess_t2.py  profile_sampling.py  roi_integrate.py  util.py  vtkutil.py
src/crashs/param/: template_defaults.json
src/crashs/upsample/: upsample_net.py
templates/crashs_template_01/: ashs_template_flip.mat  template.json  template_shoot_left.vtk  template_shoot_right.vtk
upsample/: upsample_net.py
