[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crashs"
version = "0.2.0"
authors = [
  { name="Paul Yushkevich", email="pyushkevich@gmail.com" },
]
description = "CRASHS: Cortical Reconstruction for Automated Segmentation of Hippocampal Subfields (ASHS)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.urls]
Homepage = "https://github.com/pyushkevich/crashs"