[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crashs"
version = "0.2.16"
authors = [
  { name="Paul Yushkevich", email="pyushkevich@gmail.com" },
]
description = "CRASHS: Cortical Reconstruction for Automated Segmentation of Hippocampal Subfields (ASHS)"
dependencies = [
  'numpy',
  'torch',
  'pykeops',
  'pymeshlab',
  'vtk',
  'SimpleITK',
  'geomloss',
  'statsmodels',
  'monai',
  'picsl_c3d>=1.4.2.1',
  'picsl_greedy>=0.0.5',
  'picsl_cmrep>=1.0.4.0',
  'nnunetv2>=2.3.1',
  'acvl_utils==0.2',
  'blosc2',
  'python-gdcm==3.0.23.1',
  'huggingface_hub==0.36.0'
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[project.urls]
Homepage = "https://github.com/pyushkevich/crashs"
